# project_3

./: CMakeLists.txt  package.xml
calibration/Gopro-1080/: ost.txt  ost.yaml
calibration/Gopro-1080S/: gopro1080ps.txt
calibration/Gopro-2-1080W/: Gopro-2-1080W.txt
doc/: SN4326.conf  TK1_OPENCV
msg/: Image_info.msg
src/: control.cpp  image_detect.cpp  image_detect_stereo.cpp  mouse.cpp  pixel_to_depth.cpp
